--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,4 +1,4 @@
 <title>{{ site.owner }} | {{ page.title }}</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/styles.css">
