--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,14 +9,17 @@ $golden-ratio-3: $golden-ratio-unit * 3;
 $golden-ratio-10: $golden-ratio-unit * 10;
 
 // Background setup
+{% if site.pattern-style == empty %}
+{% else %}
 @import 'patternbolt';
 $pattern-type: '{{ site.pattern-style }}';
-$pattern-size: $golden-ratio-unit * {{ site.pattern-size }};
-$pattern-background-colour: {{ site.pattern-background }};
-$pattern-foreground-colour: {{ site.pattern-foreground }};
+$pattern-size: $golden-ratio-unit * {% if site.pattern-size == empty %}1{% else %}{{ site.pattern-size }}{% endif %};
+$pattern-background-colour: {% if site.pattern-background == empty %}white{% else %}{{ site.pattern-background }}{% endif %};
+$pattern-foreground-colour: {% if site.pattern-foreground == empty %}black{% else %}{{ site.pattern-foreground }}{% endif %};
 $pattern-opacity: 1;
 $pattern-mask: none;
 $pattern-offset: $pattern-size / 4;
+{% endif %}
 
 // Typography
 $title-font-stack: 'loraregular', serif;
