--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -5,50 +5,66 @@
     {% include favicon.html %}
 </head>
 <body>
-{% include menu.html %}
-{{ content }}
-    {% unless page.name == "404" %}
-        {% if cv_items.category == 'Work Experience' %}
-            <h2>Work Experience</h2>
-            {% assign display_order = site.cv_items | sort "display-order" %}
-            {% for cv_item in display_order %}
-                <h3>
-                    {% if cv_item.employer-link != empty %}<a href="{{ cv.item.employer-link }}">{{ cv_item.employer }}</a>
-                    {% else %}{{ cv_item.employer }}
-                    {% endif %} | {{ cv_item.role }}
-                </h3>
-                <h4>{{ cv_item.started }} - {{ cv_item.ended }}</h4>
-                {{ cv_item.content }}
-            {% endfor %}
-        {% elsif cv_items.category == 'Education' %}
-            <h2>Education</h2>
-            {% assign display_order = site.cv_items | sort "display-order" %}
-            {% for cv_item in display_order %}
-                <h3>
-                    {% if cv_item.employer-link != empty %}<a href="{{ cv.item.employer-link }}">{{ cv_item.employer }}</a>
-                    {% else %}{{ cv_item.employer }}
-                    {% endif %}
-                    {% if cv_item.role != empty %} | {{ cv_item.role }}
-                    {% endif %}
-                </h3>
-                <h4>{{ cv_item.started }} - {{ cv_item.ended }}</h4>
-                {{ cv_item.content }}
-            {% endfor %}
-        {% elsif cv_items.category == 'Skills' %}
-            <h2>Skills</h2>
-            {% assign display_order = site.cv_items | sort "display-order" %}
-                {% for cv_item in display_order %}
-                    {% if cv_item.employer != empty %}
-                    <h3>
-                        {% if cv_item.employer-link != empty %}<a href="{{ cv.item.employer-link }}">{{ cv_item.employer }}</a>
-                        {% else %}{{ cv_item.employer }}
-                        {% endif %} | {{ cv_item.role }}
-                    </h3>
-                    {% endif %}
-                <h4>{{ cv_item.started }} - {{ cv_item.ended }}</h4>
-                {{ cv_item.content }}
-            {% endfor %}
-        {% endif %}
-    {% endunless %}
+    {% include menu.html %}
+    <main>
+        <header>
+        {{ content }}
+        </header>
+        {% unless page.name == "404" %}
+            {% if cv_items.category == 'Work Experience' %}
+                <section>
+                    <h2>Work Experience</h2>
+                    {% assign display_order = site.cv_items | sort "display-order" %}
+                    {% for cv_item in display_order %}
+                        <article>
+                            <h3>
+                                {% if cv_item.employer-link != empty %}<a href="{{ cv.item.employer-link }}">{{ cv_item.employer }}</a>
+                                {% else %}{{ cv_item.employer }}
+                                {% endif %} | {{ cv_item.role }}
+                            </h3>
+                            <h4><time>{{ cv_item.started }}</time> - <time>{{ cv_item.ended }}</time></h4>
+                            {{ cv_item.content }}
+                        </article>
+                    {% endfor %}
+                </section>
+            {% elsif cv_items.category == 'Education' %}
+                <section>
+                    <h2>Education</h2>
+                    {% assign display_order = site.cv_items | sort "display-order" %}
+                    {% for cv_item in display_order %}
+                        <article>
+                            <h3>
+                                {% if cv_item.employer-link != empty %}<a href="{{ cv.item.employer-link }}">{{ cv_item.employer }}</a>
+                                {% else %}{{ cv_item.employer }}
+                                {% endif %}
+                                {% if cv_item.role != empty %} | {{ cv_item.role }}
+                                {% endif %}
+                            </h3>
+                            <h4><time>{{ cv_item.started }}</time> - <time>{{ cv_item.ended }}</time></h4>
+                            {{ cv_item.content }}
+                        </article>
+                    {% endfor %}
+                </section>
+            {% elsif cv_items.category == 'Skills' %}
+                <section>
+                    <h2>Skills</h2>
+                    {% assign display_order = site.cv_items | sort "display-order" %}
+                    {% for cv_item in display_order %}
+                        <article>
+                            {% if cv_item.employer != empty %}
+                            <h3>
+                                {% if cv_item.employer-link != empty %}<a href="{{ cv.item.employer-link }}">{{ cv_item.employer }}</a>
+                                {% else %}{{ cv_item.employer }}
+                                {% endif %} | {{ cv_item.role }}
+                            </h3>
+                            {% endif %}
+                            <h4><time>{{ cv_item.started }}</time> - <time>{{ cv_item.ended }}</time></h4>
+                            {{ cv_item.content }}
+                        </article>
+                    {% endfor %}
+                </section>
+            {% endif %}
+        {% endunless %}
+    </main>
 </body>
 </html>
