--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+{% if site.language == empty %}
+<html lang="en">
+{% else %}
+<html lang="{{ site.language }}">
+{% endif %}
 <head>
     {% include head.html %}
     {% include favicon.html %}
