--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-{% if site.language == empty %}
-<html lang="en">
-{% else %}
-<html lang="{{ site.language }}">
-{% endif %}
-<head>
-    {% include head.html %}
-    {% include favicon.html %}
-</head>
-<body>
-    {% include menu.html %}
+{% include before_main.html %}
     <main>
         <header>
         {{ content }}
@@ -70,5 +59,4 @@
             {% endif %}
         {% endunless %}
     </main>
-</body>
-</html>
+{% include after_main.html %}
