--- a/_includes/before_main.html
+++ b/_includes/before_main.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="shortcut icon" href="{% include favicon.html %}"/>
+    {% unless site.seo == true %}<meta name="robots" content="noindex">{% endunless %}
 </head>
 <body>
     {% include menu.html %}
