improve contrast for accessibility and animation of menu icon

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -12,7 +12,7 @@ $menu-icon-size: 3em;
         text-align: right;
         transition: transform $transition-effect, color $transition-effect;
         font-size: $menu-icon-size;
-        color: $decoration-colour;
+        line-height: 1em;
         cursor: default;
         z-index: 3;
         padding {
