use svg sprite rather than inline for portfolio

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,5 +1,5 @@
 {% include before_main.html %}
-{% include icon_link.html %}
+{% include icons.svg %}
     <main>
         <header>
         {{ content }}
