complete move to svg sprite system

--- a/_includes/before_main.html
+++ b/_includes/before_main.html
@@ -13,4 +13,5 @@
     {% unless site.seo == true %}<meta name="robots" content="noindex">{% endunless %}
 </head>
 <body>
+    {% include icons.svg %}
     {% include menu.html %}
