--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,7 +11,7 @@
       {% endcase %}
     {% endfor %}
     {% if site.github != empty %}
-      <li><a href="https://github.com/{{ site.github }}/"><span class="bullet">»{% include icon_github.html %}</span></a></li>
+      <li><a href="https://github.com/{{ site.github }}/"><span class="bullet">»<svg><use xlink:href="#icon-github"/></svg></span></a></li>
     {% endif %}
     </ul>
   </nav>
