--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -10,7 +10,7 @@ body {
     max-width: $max-content-width;
 }
 
-h1, h2, h3, h4, p, ul, li, blockquote {
+h1, h2, h3, h4, p, ul, li, address {
     color: $text-colour;
     margin: 0;
     font: {
