--- a/_includes/before_main.html
+++ b/_includes/before_main.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-{% if site.language == empty %}
-<html lang="en">
-{% else %}
-<html lang="{{ site.language }}">
-{% endif %}
+<html lang="{% if site.language %}{{ site.language }}{% else %}en{% endif %}">
 <head>
     <title>{{ site.owner }} | {{ page.title }}</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
@@ -13,7 +9,7 @@
     {% unless site.seo == true %}<meta name="robots" content="noindex">{% endunless %}
 </head>
 <body>
-    {% include icons.svg %}
+{% include icons.svg %}
     <header>
-    {% include menu.html %}
+{% include menu.html %}
     </header>
