tidy up menu code

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,13 +1,13 @@
     <div class="menu">
       <div class="menu-icon">+</div>
-      <nav class="menu-nav">
+      <nav>
         <ul>
-    {% for page in site.pages %}
-      {% case page.layout %}
+{% for page in site.pages %}
+  {% case page.layout %}
           {% when 'standard' %}<li><a href="{{ site.baseurl }}{{ page.url }}"><span class="bullet">»</span>{{ page.title }}</a></li>
           {% when 'portfolio' %}<li><a href="{{ site.baseurl }}{{ page.url }}"><span class="bullet">»</span>{{ page.title }}</a></li>
-      {% endcase %}
-    {% endfor %}
+  {% endcase %}
+{% endfor %}
           {% if site.github %}<li><a href="https://github.com/{{ site.github }}/"><span class="bullet">»<svg><use xlink:href="#icon-github"/></svg></span></a></li>{% endif %}
         </ul>
       </nav>
