additional address styling

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -67,6 +67,7 @@ address {
     margin-left: $golden-ratio-1;
     padding-left: $golden-ratio-1;
     border-left: $decoration-thickness solid $decoration-colour;
+    font-style: normal;
 
  /*   p {
         padding: 0;
