update meta robots tags

--- a/_includes/before_main.html
+++ b/_includes/before_main.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="shortcut icon" href="{% include favicon.html %}"/>
-    {% unless site.seo == true %}<meta name="robots" content="noindex">{% endunless %}
+    {% unless site.seo == true %}<meta name="robots" content="none">
+    <meta name="robots" content="noarchive">
+    {% endunless %}
+    <meta name="robots" content="noodp">
 </head>
 <body>
 {% include icons.svg %}
