--- a/_includes/before_main.html
+++ b/_includes/before_main.html
@@ -2,6 +2,7 @@
 <html lang="{% if site.language %}{{ site.language }}{% else %}en{% endif %}">
 <head>
     <title>{{ site.first_name | append: ' '  }}{{ site.middle_names | append: ' ' }}{{ site.last_name }} | {{ page.title }}</title>
+    <meta name="description" content="{{ page.description }}">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
