move title into template

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,5 +1,6 @@
 {% include before_main.html %}
     <main>
+        <h1>Portfolio</h1>
         {{ content }}
         <section class="portfolio-container">
             {% assign display_order = site.portfolio_items | sort: "display-order" %}
