--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,17 +4,17 @@
         {{ content }}
         <section class="portfolio-container">
             {% assign display_order = site.portfolio_items | sort: "display-order" %}
-            {% for portfolio_item in display_order %}
-                <article class="portfolio-item" style="background-image:url(/images/{{ portfolio_item.path | remove: '_portfolio_items/' | replace: '.md', '.jpg' }});">
+            {% for item in display_order %}
+                <article class="portfolio-item" style="background-image:url(/images/{{ item.path | remove: '_portfolio_items/' | replace: '.md', '.jpg' }});">
                     <div class="portfolio-item-title">
-                        <h2><a href="{{ portfolio_item.link }}">{{ portfolio_item.title }}</a></h2>
+                        <h2><a href="{{ item.link }}">{{ item.title }}</a></h2>
                     </div>
                     <div class="portfolio-item-overlay">
                         <div class="portfolio-item-content">
-                            <h2><a href="{{ portfolio_item.link }}">{{ portfolio_item.title }}</a></h2>              
-                            {% if portfolio_item.employer %}<h3>{{ portfolio_item.employer }}</h3>{% endif %}
-                            {{ portfolio_item.content }}
-                            {% if portfolio_item.link %}<p class="portfolio-item-link"><svg><use xlink:href="#icon-link"/></svg> <a href="{{ portfolio_item.link }}">{% if portfolio_item.link-text %}{{ portfolio_item.link-text }}{% else %}{{ portfolio_item.link }}{% endif %}</a></p>{% endif %}
+                            <h2><a href="{{ item.link }}">{{ item.title }}</a></h2>              
+                            {% if item.employer %}<h3>{{ item.employer }}</h3>{% endif %}
+                            {{ item.content }}
+                            {% if item.link %}<p class="portfolio-item-link"><svg><use xlink:href="#icon-link"/></svg> <a href="{{ item.link }}">{% if item.link-text %}{{ item.link-text }}{% else %}{{ item.link }}{% endif %}</a></p>{% endif %}
                         </div>
                     </div>
                 </article>
