--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,7 +1,9 @@
 {% include before_main.html %}
     <main>
-        <h1>Portfolio</h1>
-        {{ content }}
+        <header>
+            <h1>Portfolio</h1>
+            {{ content }}
+        </header>
         <section class="portfolio-container">
             {% assign display_order = site.portfolio_items | sort: "display-order" %}
             {% for item in display_order %}
