--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -1,104 +1,112 @@
 .portfolio-container {
     max-width: $max-content-width;
-}
 
-.portfolio-item {
-    width: 100%;
-    height: $golden-ratio-10;
-    transition: height $transition-effect, filter $transition-effect;
-    overflow: hidden;
-    position: relative;
-    background: {
-        size: cover;
-        position: center top;
-    }
+    article {
+/*        width: 100%; */
+        height: $golden-ratio-10;
+        transition: height $transition-effect, filter $transition-effect;
+        overflow: hidden;
+        position: relative;
+        padding: 1em;
+        background: {
+            size: cover;
+            position: center top;
+        }
 
-    h2, h3, p {
-        margin: 0;
-        padding: 0;
-        color: white;
-        font-size: 1em;
-    }
+        h3,
+        p {
+            margin: 0;
+            color: white;
+        }
 
-    h2 {
-        font-size: $golden-ratio-1;
-    }
+        h2 {
+            font-size: $golden-ratio-1;
+            background-color: black;
+            color: white;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: 1;
+            text-decoration: none;
+            text-align: right;
+            transition: display $transition-effect;
 
-    h3 {
-        font-size: 1.3em;
-        line-height: 2em;
+            a {
+                text-decoration: none;
+                border: none;
+            }
+        }
+
+        h3 {
+            font-size: 1.3em;
+            line-height: 2em;
+            padding: 0;
+            
+            &:before {
+                content: "\00BB";
+                padding-left: 0.25em;
+                padding-right: 0.25em;
+            }
+        }
+
+        p {
+            font-size: 1em;
+            padding: 0.5em;
+        }
+
+        svg {
+            width: 1em;
+            height: 1em;
+            fill: white;
+        }
+
+        .hide-text {
+            display: none;
+        }
+
+        &:hover,
+        &:focus {
+            height: initial;
+            min-height: $golden-ratio-10;
+            filter: grayscale(100%);
         
-        &:before {
-            content: "\00BB";
-            padding-left: 0.25em;
-            padding-right: 0.25em;
+            .portfolio-item-overlay {
+                opacity: 1;
+            }
+
+            h2 {
+                background-color: initial;
+                position: initial;
+                bottom: initial;
+                right: initial;
+                z-index: initial;
+                text-decoration: initial;
+                text-align: initial;
+                margin: 0;
+                padding: 0;
+                font-size: $golden-ratio-1;
+            }
+
+            .hide-text {
+                display: initial;
+            }
         }
     }
 
-    svg {
-        width: 1em;
-        height: 1em;
+    .portfolio-item-overlay {
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        transition: opacity $transition-effect;
+        background-image: 
+            linear-gradient(
+            rgba(0, 0, 0, 0.85),
+            rgba(0, 0, 0, 0.85)
+            );
     }
-
-    p {
-        padding: 0.5em;
+/*
+    .portfolio-item-content {
+        padding: 1em;
     }
-
-    &:hover {
-        height: 1.5 * $golden-ratio-10;
-        filter: grayscale(100%);
-    
-        .portfolio-item-overlay {
-            opacity: 1;
-        }
-
-        .portfolio-item-title {
-            display: none;    
-        }   
-    }
-}
-
-.portfolio-item-title {
-    background-color: black;
-    color: white;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 1;
-    text-decoration: none;
-    border: 0;
-    transition: display $transition-effect;
-
-    h2, a {
-        text-decoration: none;
-        border: 0;
-        text-align: right;
-    }
-}
-
-.portfolio-item-overlay {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    transition: opacity $transition-effect;
-    background-image: 
-        linear-gradient(
-        rgba(0, 0, 0, 0.85),
-        rgba(0, 0, 0, 0.85)
-        );
-}
-
-.portfolio-item-content {
-    padding: 1em;
-
-    h2 a {
-        text-decoration: none;
-        border: none;
-    }
-}
-
-.portfolio-item-link{
-    svg {
-        fill: white;
-    }
+*/
 }
