--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -1,20 +1,20 @@
 body {
     font-size: $font-size-small;
 }
-
+/*
 .portfolio-item:hover {
         height: 35em;
 }
-
+*/
 @media only screen and (min-width: $screen-small + 1) {
     body {
         font-size: $font-size-medium;
     }
-
+/*
     .portfolio-item:hover {
         height: 37em;
     }
-
+*/
 }
 
 @media only screen and (min-width: $screen-medium + 1) {
@@ -22,10 +22,11 @@ body {
         font-size: $font-size-large;
         padding: $golden-ratio-3;
     }
-
+/*
     .portfolio-item:hover {
         height: 24.27em;
     }
+*/
 }
 
 @media screen and (min-width: 955px) {
