--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -24,7 +24,7 @@
                                         {% else %}{{ job.employer }}
                                         {% endif %} | {{ job.role }}
                                     </h3>
-                                    <h4><time datetime="{{ job.start-year }}{% if job.start-month %}-{{ job.start-month}}{% endif %}">{% if job.start-month %}{{ job.start-month}}/{% endif %}{{ job.start-year }}</time> - <time datetime="{{ job.end-year }}{% if job.end-month %}-{{ job.end-month}}{% endif %}">{% if job.end-month %}{{ job.end-month}}/{{ job.end-year }}</time></h4>
+                                    <h4><time datetime="{{ job.start-year }}{% if job.start-month %}-{{ job.start-month}}{% endif %}">{% if job.start-month %}{{ job.start-month}}/{% endif %}{{ job.start-year }}</time> - <time datetime="{{ job.end-year }}{% if job.end-month %}-{{ job.end-month}}{% endif %}">{% if job.end-month %}{{ job.end-month}}/{% endif %}{{ job.end-year }}</time></h4>
                                     {{ job.content }}
                                 </article>
                             {% endfor %}
