--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -39,7 +39,7 @@ $menu-icon-size: 3em;
         margin-top: $menu-icon-size;
         background-color: $page-colour;
         z-index: 2;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 
         li {
             font-size: $golden-ratio-1;
@@ -63,7 +63,8 @@ $menu-icon-size: 3em;
                 padding-right: 0.5em;
             }
 
-            &:hover, &:hover .bullet {
+            &:hover,
+            &:hover .bullet {
                 color: $text-colour;
             }
 
