fix incorrect liquid tags

--- a/_includes/job_dates.html
+++ b/_includes/job_dates.html
@@ -70,4 +70,4 @@
     {{- job.end-year -}}
 {%- endcapture -%}
 
-<time datetime="{{- start-datetime -}}">{{- start-date -}}</time> - <time datetime="{%- end-datetime -%}">{%- end-date -%}</time>
+<time datetime="{{- start-datetime -}}">{{- start-date -}}</time> - <time datetime="{{- end-datetime -}}">{{- end-date -}}</time>
